message CAuthentication_GetPasswordRSAPublicKey_Request {
	optional string account_name = 1;
}

message CAuthentication_GetPasswordRSAPublicKey_Response {
	optional string publickey_mod = 1;
	optional string publickey_exp = 2;
	optional uint64 timestamp = 3;
}

message CAuthentication_BeginAuthSessionViaCredentials_Request {
	optional string device_friendly_name = 1;                  // user-agent in the browser
	optional string account_name = 2;
	optional string encrypted_password = 3;
	optional uint64 encryption_timestamp = 4;
	optional bool remember_login = 5;
	optional uint32 platform_type = 6;                         // EPlatformType
	optional uint32 persistence = 7 [default = 1];             // Appears to be the same as remember_login - 1/0
	optional string website_id = 8 [default = "Unknown"];
}

message CAuthentication_BeginAuthSessionViaCredentials_Response {
	optional uint64 client_id = 1;
	optional bytes request_id = 2;
	optional float interval = 3;
	repeated .CAuthentication_AllowedConfirmation allowed_confirmations = 4;
	optional uint64 steamid = 5;
	optional string weak_token = 6; // unknown, possibly indicates if your password is weak
}

message CAuthentication_AllowedConfirmation {
	// confirmation_type 1 = no confirmation, no associated message
	// confirmation_type 2 = email code, associated message = email domain
	// confirmation_type 3 = TOTP, no associated message
	// confirmation_type 6 = unknown, observed with an email code login
	optional uint32 confirmation_type = 1;
	optional string associated_message = 2;
}

message CAuthentication_UpdateAuthSessionWithSteamGuardCode_Request {
	optional uint64 client_id = 1;
	optional fixed64 steamid = 2;
	optional string code = 3;
	optional uint32 code_type = 4; // 2 = email; 3 = TOTP
}

message CAuthentication_UpdateAuthSessionWithSteamGuardCode_Response {
}

message CAuthentication_PollAuthSessionStatus_Request {
	optional uint64 client_id = 1;
	optional bytes request_id = 2;
	optional fixed64 token_to_revoke = 3;
}

message CAuthentication_PollAuthSessionStatus_Response {
	optional uint64 new_client_id = 1;
	optional string new_challenge_url = 2;
	optional string refresh_token = 3;
	optional string access_token = 4;
	optional bool had_remote_interaction = 5;
	optional string account_name = 6;
}
